force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Approved__c.field-meta.xml
<CustomField>
    <fullName>Billing_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Approved</label>
    <type>Checkbox</type>
</CustomField>