force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Billing_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Rejected</label>
    <type>Checkbox</type>
</CustomField>