force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/FPS_Saved__c.field-meta.xml
<CustomField>
    <fullName>FPS_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms FPS Trust Agree was downloaded/saved</description>
    <inlineHelpText>Confirms FPS Trust Agree was downloaded/saved</inlineHelpText>
    <label>FPS Saved</label>
    <type>Checkbox</type>
</CustomField>