force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Implementation related to docusign documents.</description>
    <inlineHelpText>Implementation related to docusign documents.</inlineHelpText>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>