force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Plan the Case is Linked To if the DocuSign was sent from a Case</description>
    <formula>dsfs__Case__r.Plan__r.Name</formula>
    <inlineHelpText>Plan the Case is Linked To if the DocuSign was sent from a Case</inlineHelpText>
    <label>Plan</label>
    <type>Text</type>
</CustomField>